testdata/step_15/valid/rename_function_param.c
foo(b);

main(){
    return foo(3);
}

foo(a){
    return a + 1;
}