testdata/step_15/invalid/bad_arg.c
foo(a){
    return 3 + a;
}

main(){
    return foo();
}